@@ -1,3 +1,9 @@
+2008-06-17  Neal H. Walfield  <neal@gnu.org>
+
+	* addon/newlib/libc/sys/hurd/gettimeofdayr.c: Include
+	<l4/schedule.h>.
+	(gettimeofday): Use l4_system_clock to get basic time information.
+
 2008-05-31  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile.am ($(srcdir)/newlib/patch.stamp): Remove ``PACKAGE_*''
